Various fixes for MS stuff. Refreshing seems broke tbh