@@ -1,28 +1,67 @@
 package net.dirtcraft.dirtlauncher;
 
+import com.google.common.collect.Multimap;
+import com.google.gson.Gson;
+import com.google.gson.GsonBuilder;
+import net.dirtcraft.dirtlauncher.data.Minecraft.Java.JavaVersionManifest;
+import net.dirtcraft.dirtlauncher.data.Minecraft.JavaVersion;
+import net.dirtcraft.dirtlauncher.data.serializers.MultiMapAdapter;
+import net.dirtcraft.dirtlauncher.game.authentification.account.Account;
+import net.dirtcraft.dirtlauncher.game.authentification.account.AccountAdapter;
 import org.apache.commons.lang3.SystemUtils;
 
 import java.io.IOException;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.concurrent.Executors;
+import java.util.concurrent.ThreadPoolExecutor;
 
 public class Main {
-    public static final String DEFAULT_JRE = "jre8_x64";
-    public static final String DEFAULT_JFX = "javafx-sdk-17.0.1";
-    public static void main(String[] args) throws IOException {
+    public static ThreadPoolExecutor THREAD_POOL = (ThreadPoolExecutor) Executors.newFixedThreadPool(24);
+    public static Gson gson = new GsonBuilder()
+            .serializeNulls()
+            .setPrettyPrinting()
+            .enableComplexMapKeySerialization()
+            .registerTypeAdapter(Multimap .class, new MultiMapAdapter<>())
+            .registerTypeAdapter(Account .class, new AccountAdapter())
+            .create();
+    public static final String DEFAULT_JRE = "default_jre";
+    public static final String DEFAULT_JFX = "default_jfx";
+    public static final String[] MODULES = {
+            "javafx.controls",
+            "javafx.fxml",
+            "javafx.web"
+    };
+
+    public static void main(String[] args) throws IOException, InterruptedException {
         Path launcherDirectory = getLauncherDirectory();
         Path jre = launcherDirectory
                 .resolve("Runtime")
                 .resolve(DEFAULT_JRE)
                 .resolve("bin")
-                .resolve("javaw.exe");
+                .resolve("java");
         Path jfx = launcherDirectory
                 .resolve("Runtime")
                 .resolve(DEFAULT_JFX)
                 .resolve("lib");
-        String exec = String.format("%s --module-path %s --add-modules javafx.controls,javafx.fxml,javafx.web -cp Dirt-Launcher.jar net.dirtcraft.dirtlauncher.DirtLauncher -installed -x64", jre.toString(), jfx.toString());
         System.out.println("RELAUNCHING");
-        Runtime.getRuntime().exec(exec);
+        Process p = new ProcessBuilder(
+                jre.toString(),
+                "-Dprism.verbose=true",
+                "--module-path",
+                jfx.toString(),
+                "--add-modules",
+                String.join(",", MODULES),
+                "-cp",
+                "Dirt-Launcher.jar",
+                "net.dirtcraft.dirtlauncher.DirtLauncher",
+                "-debug",
+                "-verbose"
+        ).inheritIO().start();
+        while (p.isAlive()) Thread.sleep(5000);
+
     }
 
     private static Path getLauncherDirectory(){
@@ -31,6 +70,5 @@ public class Main {
         else if (SystemUtils.IS_OS_MAC)// If the host OS is mac, use the user's Application Support directory
             return Paths.get(System.getProperty("user.home"), "Library", "Application Support", "DirtCraft", "DirtLauncher");
         else return Paths.get(System.getProperty("user.home"), "DirtCraft", "DirtLauncher");
-        //Logger.INSTANCE.debug("Block Start @ " + (System.currentTimeMillis() - x) + "ms");
     }
 }
